Map matching component via BMW Barefoot.